# Studienprojekt

App/: CMakeLists.txt
MyCamera/: CMakeLists.txt  MyCameraCamera.conf  MyCameraCamera.cpp  MyCameraCamera.h  MyCameraCameraFactory.cpp  MyCameraCameraFactory.h  MyCameraCameraTest.conf
voxelsdk/: CMakeLists.txt
